cmake tutorial: Adding a Generated File and Generator

--- a/cmake/tutorial/Makefile
+++ b/cmake/tutorial/Makefile
@@ -557,6 +557,19 @@ MathFunctions/fast:
 	$(MAKE) -f MathFunctions/CMakeFiles/MathFunctions.dir/build.make MathFunctions/CMakeFiles/MathFunctions.dir/build
 .PHONY : MathFunctions/fast
 
+#=============================================================================
+# Target rules for targets named MakeTable
+
+# Build rule for target.
+MakeTable: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 MakeTable
+.PHONY : MakeTable
+
+# fast build rule for target.
+MakeTable/fast:
+	$(MAKE) -f MathFunctions/CMakeFiles/MakeTable.dir/build.make MathFunctions/CMakeFiles/MakeTable.dir/build
+.PHONY : MakeTable/fast
+
 tutorial.o: tutorial.cc.o
 
 .PHONY : tutorial.o
@@ -627,6 +640,7 @@ help:
 	@echo "... ExperimentalTest"
 	@echo "... NightlySubmit"
 	@echo "... MathFunctions"
+	@echo "... MakeTable"
 	@echo "... tutorial.o"
 	@echo "... tutorial.i"
 	@echo "... tutorial.s"
