--- a/cmake/tutorial/CMakeLists.txt
+++ b/cmake/tutorial/CMakeLists.txt
@@ -85,6 +85,9 @@ set (CPACK_RESOURCE_FILE_LICENSE
      "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
 set (CPACK_PACKAGE_VERSION_MAJOR "${Tutorial_VERSION_MAJOR}")
 set (CPACK_PACKAGE_VERSION_MINOR "${Tutorial_VERSION_MINOR}")
+
+set(CPACK_SOURCE_IGNORE_FILES "/build/")
+
 include (CPack)
 
 # distclean
