update doxygen config

--- a/sphinx_docs/docs/doxygen.conf
+++ b/sphinx_docs/docs/doxygen.conf
@@ -1,4 +1,4 @@
-PROJECT_NAME = Sphinx Docs Demo
+PROJECT_NAME = Doxygen Docs Demo
 GENERATE_XML = YES
 GENERATE_HTML = YES
 GENERATE_LATEX = NO
@@ -6,3 +6,11 @@ OUTPUT_DIRECTORY = docs
 HTML_OUTPUT = doxy_html
 XML_OUTPUT = doxy_xml
 JAVADOC_AUTOBRIEF = YES
+DISABLE_INDEX = NO
+GENERATE_TREEVIEW = YES
+HTML_TIMESTAMP = YES
+MARKDOWN_SUPPORT = YES
+RECURSIVE= YES
+INPUT = .
+FILE_PATTERNS = *.cc *.c
+EXCLUDE_PATTERNS = */CMakeFiles/*
