use Boost.Assert

--- a/boost/CMakeLists.txt
+++ b/boost/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories ("${PROJECT_BINARY_DIR}")
 add_executable (first_boost first_boost.cc)
 add_executable (link_demo link_demo.cc)
 target_link_libraries (link_demo boost_regex)
+add_executable (boost_assert boost_assert.cc)
  
 # add the install targets
 install (TARGETS first_boost DESTINATION bin)
