--- a/cpp11/CMakeLists.txt
+++ b/cpp11/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable (sizeof_member_ sizeof_member.cc)
 add_executable (trailing_return_type_ trailing_return_type.cc)
 add_executable (type_alias_ type_alias.cc)
 add_executable (default_constructor_ default_constructor.cc)
+add_executable (delegating_constructor_ delegating_constructor.cc)
  
 # add the install targets
 install (TARGETS array_begin_end_ DESTINATION bin)
