cpp11: unique_ptr

--- a/cpp11/CMakeLists.txt
+++ b/cpp11/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable (delegating_constructor_ delegating_constructor.cc)
 add_executable (lambda_ lambda.cc)
 add_executable (bind_ bind.cc)
 add_executable (shared_ptr_ shared_ptr.cc)
+add_executable (unique_ptr_ unique_ptr.cc)
  
 # add the install targets
 install (TARGETS array_begin_end_ DESTINATION bin)
